--- a/index.html
+++ b/index.html
@@ -21,12 +21,18 @@ Select ONE Additional
     <title>Unit 8 Project</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/processing.js/1.6.6/processing.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Moo+Lah+Lah&display=swap" rel="stylesheet">
     <style></style>
   </head>
 
   <body>
     <h1>The Ocean</h1>
     <canvas id="myCanvas" data-processing-sources="myP5Code.pde"> </canvas>
+    <h1>
+      Under the Sea!
+    </h1>
   </body>
 </html>
 
